--- a/main.html
+++ b/main.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
+	<p id="para">Enter the Metaverse</p>
+	<button id="butt">enterBtn</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
