--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<p id="para">Enter the Metaverse</p>
-	<button id="butt">enterBtn</button>
+	<button id="butt">Entre</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 		
