--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<p id="para">Enter the Metaverse</p>
-	<button id="butt">Enter</button>
+	<p id="status">Enter the Metaverse</p>
+	<button id="enterBtn">Enter</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 		
